# GameNonsense

./: .gitignore  Cargo.toml
cgmath-culling/: Cargo.toml
cgmath-culling/.gitt/: HEAD  config  index  packed-refs
cgmath-culling/.gitt/logs/: HEAD
cgmath-culling/.gitt/logs/refs/remotes/origin/: HEAD
cgmath-culling/.gitt/objects/pack/: pack-96b2d6159b5a518726d534ace4546fe04e81794a.idx  pack-96b2d6159b5a518726d534ace4546fe04e81794a.pack
cgmath-culling/.gitt/refs/heads/: master
objects/: armytruck.mtl  armytruck2.mtl  armytruck3.mtl  ball.mtl  disk_g.mtl  front_left_wheel2.mtl  front_right_wheel.mtl  front_right_wheel2.mtl  rear_left_wheel2.mtl  rear_right_wheel2.mtl  small.mtl  snowtree.mtl  snowtree.mtl.mtl  test2.mtl  test3.mtl  tree.fbx  tree3.mtl  tree4.mtl
objects/rock/: PineTree.fbx
shaders/: lighting_frag.c  object_frag.c  object_vert.c  post_frag.c  shadow_fog_bloom_frag.c  shadow_frag.c  shadow_vert.c  sky_frag.c  sky_vert.c  ssao_blur_frag.c  ssao_frag.c  terrain_frag.c  terrain_vert.c  tree_model_frag.c  tree_model_vert.c  tree_shadow_vert.c
src/: camera.rs  common.rs  main.rs  mesh.rs  model.rs  profiler.rs  quadtree.rs  shader.rs  vehicle.rs
src/game/: game.rs  mod.rs
