[package]
name = "game-rs"
version = "0.6.1"
edition = "2018"

[dependencies]
cgmath = "0.18.0"
gl = "0.10.0"
glfw = "0.41.0"
image = "0.19.0"
tobj = "0.1.6"
num = "0.2.0"
rand = "0.8.0"
rand_distr = "0.3.0"
rand_chacha = "0.3.0"
ndarray = "0.14.0"
fps_counter = "1.0.0"
noise = "0.7.0"
relative-path = "1.3.2"
nalgebra = "0.20"
ncollide3d = "0.22"
nphysics3d = "0.19.0"
generational-arena = "0.2.8"
lazy_static = "1.4.0"
libmath = "0.2.1"
cgmath-culling = { path = "./cgmath-culling" }


[features]
default = [
    "game-1"
]
game-1 = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units =256
panic = 'unwind'
incremental = true

overflow-checks = false

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units =256
panic = 'unwind'
incremental = true
overflow-checks = false